# medical-ai-server

./: Dockerfile  pyproject.toml  test.ipynb
src/: main.py
src/api/: deps.py  main.py
src/api/medical/: dto.py  router.py  service.py
src/api/medical/dto/: all_dto.py  base_dto.py  progress_note_dto.py  vs_ns_dto.py
src/api/medical/graphs/: medical_graph.py
src/api/medical/models/: ns.py  vs.py
src/common/: __init__.py
src/constants/: llm_models.py
src/core/: config.py  db.py
src/models/: ns.py  progressnote.py  vs.py
src/sio/features/medical/: main.py  medical_graph.py
src/sio/features/medical/dto/: __init__.py  medical_request.py  medical_response.py
src/utils/: format_util.py
